Improve caption spacing Prevent caption form getting too close to date on the left (when caption exceeds one line of text).

--- a/src/components/bonsaiCard/BonsaiCard.module.css
+++ b/src/components/bonsaiCard/BonsaiCard.module.css
@@ -102,6 +102,7 @@
 
 .captionContainer {
   width: calc(100% - 200px);
+  padding-left: 40px;
   display: flex;
   justify-content: center;
   margin-right: 100px;
